--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Noto+Sans:wght@300;400;500;600;700;800&display=swap');
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +36,6 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
+
+*{font-family: 'Noto Sans', sans-serif;}
